; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/ypldap/extr_ber.c_ber_get_enumerated.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/ypldap/extr_ber.c_ber_get_enumerated.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ber_element = type { i64, i64 }

@BER_TYPE_ENUMERATED = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ber_get_enumerated(%struct.ber_element* %0, i64* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.ber_element*, align 8
  %5 = alloca i64*, align 8
  store %struct.ber_element* %0, %struct.ber_element** %4, align 8
  store i64* %1, i64** %5, align 8
  %6 = load %struct.ber_element*, %struct.ber_element** %4, align 8
  %7 = getelementptr inbounds %struct.ber_element, %struct.ber_element* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = load i64, i64* @BER_TYPE_ENUMERATED, align 8
  %10 = icmp ne i64 %8, %9
  br i1 %10, label %11, label %12

11:                                               ; preds = %2
  store i32 -1, i32* %3, align 4
  br label %17

12:                                               ; preds = %2
  %13 = load %struct.ber_element*, %struct.ber_element** %4, align 8
  %14 = getelementptr inbounds %struct.ber_element, %struct.ber_element* %13, i32 0, i32 1
  %15 = load i64, i64* %14, align 8
  %16 = load i64*, i64** %5, align 8
  store i64 %15, i64* %16, align 8
  store i32 0, i32* %3, align 4
  br label %17

17:                                               ; preds = %12, %11
  %18 = load i32, i32* %3, align 4
  ret i32 %18
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
